[package]
name = "trackervis"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
font8x8 = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
hound = "3.5"
openmpt-sys = "0.2"
parking_lot = "0.12"
pollster = "0.4"
tempfile = "3.15"
vello = "0.8"
walkdir = "2.5"
winit = "0.30"

[build-dependencies]
pkg-config = "0.3"
